<resources>
    <string name="app_name">KemptonParkAog</string>
    <string name="welcome_message">Welcome to</string>
    <string name="church_name">Kempton Park</string>
    <string name="assemblies_of_God">Assemblies of God</string>
    <string name="bible_verse">1 Timothy 2:5</string>
    <string name="bible_verse_description">For there is one God and one mediator between God and mankind, the man Christ Jesus</string>
    <string name="aog_btg">AOG BTG</string>
    <string name="church_logo">Church logo</string>
    <string name="connect_message">Coming in for the first time? Let\'s connect</string>
    <string name="connect">Let\'s connect</string>
    <string name="connect2">first</string>
    <string name="login">Login</string>
    <string name="email_logo">Email logo</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="whatsapp_logo">WhatsApp logo</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- string arrays -->
    <string-array name="gender">
        <item>Select option</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="marital_status">
        <item>Select option</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
</resources>