<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/loginLayout"
            layout="@layout/login_layout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="311dp" />

        <ImageView
            android:id="@+id/emailImageView"
            android:layout_width="@dimen/double_large_space"
            android:layout_height="@dimen/double_large_space"
            android:layout_marginBottom="@dimen/email_margin_bottom"
            android:contentDescription="@string/email_logo"
            android:src="@mipmap/ic_gmail_logo"
            app:layout_constraintBottom_toBottomOf="@+id/loginLayout"
            app:layout_constraintStart_toStartOf="@id/guideline" />

        <ImageView
            android:id="@+id/facebookImageView"
            android:layout_width="@dimen/double_large_space"
            android:layout_height="@dimen/double_large_space"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginBottom="@dimen/facebook_margin_bottom"
            android:contentDescription="@string/facebook_logo"
            android:src="@mipmap/ic_facebook_logo"
            app:layout_constraintBottom_toBottomOf="@+id/loginLayout"
            app:layout_constraintStart_toEndOf="@+id/emailImageView" />

        <ImageView
            android:id="@+id/whatsAppImageView"
            android:layout_width="@dimen/double_large_space"
            android:layout_height="@dimen/double_large_space"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginBottom="@dimen/whatsapp_margin_bottom"
            android:contentDescription="@string/whatsapp_logo"
            android:src="@mipmap/ic_whatsapp_logo"
            app:layout_constraintBottom_toBottomOf="@+id/loginLayout"
            app:layout_constraintEnd_toStartOf="@+id/secondGuideline"
            app:layout_constraintStart_toEndOf="@+id/facebookImageView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/secondGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="121dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>